not sure what this is any more

--- a/latex-conf/bib/stablecoinRef.bib
+++ b/latex-conf/bib/stablecoinRef.bib
@@ -1,286 +1,253 @@
-% !TEX encoding = UTF-8 Unicode
+%% This BibTeX bibliography file was created using BibDesk.
+%% https://bibdesk.sourceforge.io/
 
-@article{griffin2018bitcoin,
-	title={Is bitcoin really un-tethered?},
-	author={Griffin, John M and Shams, Amin},
-	year={2018}
-}
+%% Created for Jeremy Clark at 2019-06-07 09:38:34 -0400 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
 
 
 @misc{bitmex,
 	Author = {Bitmex},
 	Howpublished = {\url{https://blog.bitmex.com/a-brief-history-of-stablecoins-part-1/}},
-	Title = {A brief history of Stablecoins (Part 1)},
 	Note = {Accessed: 2018-09-02},
+	Title = {A brief history of Stablecoins (Part 1)},
 	Year = {2018}}
 
 @misc{techrev,
 	Author = {Mike Orcutt},
 	Howpublished = {\url{https://www.technologyreview.com/s/611370/stablecoins-are-trending-but-they-may-ignore-basic-economics/}},
-	Title = {"Stablecoins" are trending, but they may ignore basic economics},
 	Note = {Accessed: 2018-07-06},
+	Title = {"Stablecoins" are trending, but they may ignore basic economics},
 	Year = {2018}}
 
 @misc{cryptoinsider,
 	Author = {Conor O'Higgins},
 	Howpublished = {\url{https://cryptoinsider.21mil.com/stablecoins-everything-need-know/}},
-	Title = {Stablecoins - everything you need to know},
 	Note = {Accessed: 2018-07-09},
+	Title = {Stablecoins - everything you need to know},
 	Year = {2018}}
 
 @misc{cointelegraph,
 	Author = {Marie Huillet},
 	Howpublished = {\url{ https://cointelegraph.com/news/ibm-backs-new-us-dollar-pegged-stablecoin-that-runs-on-stellar-network}},
-	Title = {IBM Backs New US Dollar-Pegged Stablecoin That Runs on Stellar Network},
 	Note = {Accessed: 2018-07-17},
+	Title = {IBM Backs New US Dollar-Pegged Stablecoin That Runs on Stellar Network},
 	Year = {2018}}
 
 @misc{forbes,
 	Author = {Sherman Lee},
 	Howpublished = {\url{ https://www.forbes.com/sites/shermanlee/2018/03/12/explaining-stable-coins-the-holy-grail-of-crytpocurrency/#6050d80e4fc6}},
-	Title = {Explaining Stable Coins, The Holy Grail Of Cryptocurrency},
 	Note = {Accessed: 2018-07-06},
+	Title = {Explaining Stable Coins, The Holy Grail Of Cryptocurrency},
 	Year = {2018}}
 
 @misc{medium,
 	Author = {Liquidity Network},
 	Howpublished = {\url{ https://medium.com/@liquidity.network/stablecoin-payments-with-liquidity-network-d7e7aa8e1533}},
-	Title = {Stablecoin Payments with Liquidity.Network},
 	Note = {Accessed: 2018-07-06},
+	Title = {Stablecoin Payments with Liquidity.Network},
 	Year = {2018}}
 
 @misc{instability,
 	Author = {Bob McElrath},
 	Howpublished = {\url{ https://medium.com/@bob.mcelrath/on-the-in-stability-of-stablecoins-517b7d17c3ee}},
-	Title = {On The (in)Stability of Stablecoins},
 	Note = {Accessed: 2018-09-03},
+	Title = {On The (in)Stability of Stablecoins},
 	Year = {2018}}
 
 @misc{hackernoon,
 	Author = {Haseeb Qureshi},
 	Howpublished = {\url{ https://hackernoon.com/stablecoins-designing-a-price-stable-cryptocurrency-6bf24e2689e5}},
-	Title = {Stablecoins: designing a price-stable cryptocurrency},
 	Note = {Accessed: 2018-09-03},
+	Title = {Stablecoins: designing a price-stable cryptocurrency},
 	Year = {2018}}
-
 
 @article{gemini,
-	title={The Gemini Dollar: A Regulated Stable Value Coin},
-	author={Gemini Trust Company, LLC},
-	year={2018}
-}
-
-@misc{geminiCoindesk,
-	Author ={ Nikhilesh De},
-	Howpublished = {\url{ https://www.coindesk.com/gemini-launches-nydfs-regulated-crypto-pegged-to-the-dollar/}},
-	Title = {Gemini Launches NYDFS-Regulated Crypto Pegged to the Dollar},
-	Note = {Accessed: 2018-09-10},
+	Author = {Gemini Trust Company, LLC},
+	Title = {The Gemini Dollar: A Regulated Stable Value Coin},
 	Year = {2018}}
 
+@misc{geminiCoindesk,
+	Author = {Nikhilesh De},
+	Howpublished = {\url{ https://www.coindesk.com/gemini-launches-nydfs-regulated-crypto-pegged-to-the-dollar/}},
+	Note = {Accessed: 2018-09-10},
+	Title = {Gemini Launches NYDFS-Regulated Crypto Pegged to the Dollar},
+	Year = {2018}}
 
 @misc{paxosCoindesk,
 	Author = {Nikhilesh De},
 	Howpublished = {\url{ https://www.coindesk.com/paxos-unveils-dollar-backed-stablecoin-approved-by-new-york-regulator/}},
-	Title = {Paxos Unveils Dollar-Backed Stablecoin Approved by New York Regulator},
 	Note = {Accessed: 2018-09-10},
+	Title = {Paxos Unveils Dollar-Backed Stablecoin Approved by New York Regulator},
 	Year = {2018}}
 
 @article{okoyetoward,
-  title={Toward Cryptocurrency Lending},
-  author={Okoye, Mildred Chidinma and Clark, Jeremy}
-}
+	Author = {Okoye, Mildred Chidinma and Clark, Jeremy},
+	Title = {Toward Cryptocurrency Lending}}
 
 @article{sams2015note,
-	title={A Note on Cryptocurrency Stabilisation: Seigniorage Shares},
-	author={Sams, Robert},
-	journal={Brave New Coin},
-	pages={1--8},
-	year={2015}
-}
+	Author = {Sams, Robert},
+	Journal = {Brave New Coin},
+	Pages = {1--8},
+	Title = {A Note on Cryptocurrency Stabilisation: Seigniorage Shares},
+	Year = {2015}}
 
 @misc{comprehensiveOverview,
 	Author = {CP Processor TEAM},
 	Howpublished = {\url{ https://medium.com/cp-processor/comprehensive-overview-of-stablecoins-819d183f6ac7}},
-	Title = {Comprehensive overview of STABLECOINS},
 	Note = {Accessed: 2018-01-15},
+	Title = {Comprehensive overview of STABLECOINS},
 	Year = {2018}}
 
 @misc{overview,
 	Author = {Christopher Durr},
 	Howpublished = {\url{ https://hackernoon.com/overview-of-stablecoins-2e4ffef82a73}},
-	Title = {Overview of Stablecoins},
 	Note = {Accessed: 2018-01-15},
-	Year = {2018}}	
-
+	Title = {Overview of Stablecoins},
+	Year = {2018}}
 
 @incollection{smithin2002money,
-  title={What is money? Introduction},
-  author={Smithin, John},
-  booktitle={What is Money?},
-  pages={11--25},
-  year={2002},
-  publisher={Routledge}
-}
+	Author = {Smithin, John},
+	Booktitle = {What is Money?},
+	Pages = {11--25},
+	Publisher = {Routledge},
+	Title = {What is money? Introduction},
+	Year = {2002}}
 
 @misc{linkedin,
 	Author = {Sunny Dhillon},
 	Howpublished = {\url{ https://www.linkedin.com/pulse/stablecoins-vs-govtcoins-race-solve-cryptocurrencies-price-dhillon}},
-	Title = {Stablecoins vs. Govtcoins: The Race to Solve Cryptocurrencies Price Volatility Problems},
 	Note = {Accessed: 2018-10-29},
-	Year = {2018}}	
+	Title = {Stablecoins vs. Govtcoins: The Race to Solve Cryptocurrencies Price Volatility Problems},
+	Year = {2018}}
 
 @article{barrdear2016macroeconomics,
-  title={The macroeconomics of central bank issued digital currencies},
-  author={Barrdear, John and Kumhof, Michael},
-  year={2016}
-}
+	Author = {Barrdear, John and Kumhof, Michael},
+	Title = {The macroeconomics of central bank issued digital currencies},
+	Year = {2016}}
 
 @article{reportone,
-	title={The state of stablecoins},
-	author={Blockchain},
-	year={2018}
-}
-
+	Author = {Blockchain},
+	Title = {The state of stablecoins},
+	Year = {2018}}
 
 @article{reporttwo,
-	title={2019 state of stablecoin},
-	author={Blockchain},
-	year={2019}
-}
-
+	Author = {Blockchain},
+	Title = {2019 state of stablecoin},
+	Year = {2019}}
 
 @misc{euromoney,
 	Author = {Peter Lee},
 	Howpublished = {\url{ https://www.euromoney.com/article/b1bbk5rb8gp227/forget-bitcoin-stablecoins-will-change-how-money-works?copyrightInfo=true}},
-	Title = {Forget bitcoin: stablecoins will change how money works},
 	Note = {Accessed: 2018-10-29},
-	Year = {2018}}	
+	Title = {Forget bitcoin: stablecoins will change how money works},
+	Year = {2018}}
 
 @misc{coinsexplained,
 	Author = {Lukas Schor},
 	Howpublished = {\url{ https://medium.com/@argongroup/stablecoins-explained-206466da5e61}},
-	Title = {Stablecoins Explained},
 	Note = {Accessed: 2018-10-29},
+	Title = {Stablecoins Explained},
 	Year = {2018}}
-	
+
 @misc{nakamoto2008bitcoin,
 	Author = {Nakamoto, Satoshi},
 	Title = {Bitcoin: A peer-to-peer electronic cash system},
 	Year = {2008}}
 
 @misc{swan,
-	Author = {},
-	Title = {Black Swan},
 	Howpublished = {\url{ https://www.investopedia.com/terms/b/blackswan.asp	}},
-    Year = {2008}}
+	Title = {Black Swan},
+	Year = {2008}}
 
 @book{harris2003trading,
-  title={Trading and exchanges: Market microstructure for practitioners},
-  author={Harris, Larry},
-  pages={410--419},
-  year={2003},
-  publisher={Oxford University Press, USA}
+	Author = {Harris, Larry},
+	Pages = {410--419},
+	Publisher = {Oxford University Press, USA},
+	Title = {Trading and exchanges: Market microstructure for practitioners},
+	Year = {2003}}
 
-}
-
-@book {FHayek,
-  title={The Denationalization of Money},
-  author={Friedrich Hayek},
-  pages={},
-  year={1978},
-  publisher={Institute of Economic Affairs}
-}
+@book{FHayek,
+	Author = {Friedrich Hayek},
+	Publisher = {Institute of Economic Affairs},
+	Title = {The Denationalization of Money},
+	Year = {1978}}
 
 @article{ametrano2016hayek,
-  title={Hayek money: The cryptocurrency price stability solution},
-  author={Ametrano, Ferdinando M},
-  year={2016}
-}
+	Author = {Ametrano, Ferdinando M},
+	Title = {Hayek money: The cryptocurrency price stability solution},
+	Year = {2016}}
 
 @misc{TheSearc7:online,
-author = {Vitalik Buterin},
-title = {The Search for a Stable Cryptocurrency},
-howpublished = {\url{https://blog.ethereum.org/2014/11/11/search-stable-cryptocurrency/}},
-month = {November4},
-year = {2014},
-note = {(Accessed on 02/11/2019)}
-}
+	Author = {Vitalik Buterin},
+	Howpublished = {\url{https://blog.ethereum.org/2014/11/11/search-stable-cryptocurrency/}},
+	Month = {November4},
+	Note = {(Accessed on 02/11/2019)},
+	Title = {The Search for a Stable Cryptocurrency},
+	Year = {2014}}
 
 @misc{StateofS96:online,
-author = {Nathan Sexer},
-title = {State of Stablecoins, 2018 – ConsenSys Media},
-howpublished = {\url{https://media.consensys.net/the-state-of-stablecoins-2018-79ccb9988e63}},
-month = {July24},
-year = {2018},
-note = {(Accessed on 02/12/2019)}
-}
+	Author = {Nathan Sexer},
+	Howpublished = {\url{https://media.consensys.net/the-state-of-stablecoins-2018-79ccb9988e63}},
+	Month = {July24},
+	Note = {(Accessed on 02/12/2019)},
+	Title = {State of Stablecoins, 2018 -- ConsenSys Media},
+	Year = {2018}}
 
 @misc{ltblackg50:online,
-author = {Bryan Routledge, Ariel Zetlin-Jones},
-title = {ltblackgray0.1@let@token Currency Stability Using Blockchain Technology},
-howpublished = {\url{http://www.andrew.cmu.edu/user/azj/research/rzj_slides201808.pdf}},
-month = {August10},
-year = {2018},
-note = {(Accessed on 02/12/2019)}
-}
-
+	Author = {Bryan Routledge, Ariel Zetlin-Jones},
+	Howpublished = {\url{http://www.andrew.cmu.edu/user/azj/research/rzj_slides201808.pdf}},
+	Month = {August10},
+	Note = {(Accessed on 02/12/2019)},
+	Title = {ltblackgray0.1@let@token Currency Stability Using Blockchain Technology},
+	Year = {2018}}
 
 @article{anderson2019bitcoin,
-  title={Bitcoin redux},
-  author={Anderson, Ross John and Shumailov, Ilia and Ahmed, Mansoor and Rietmann, Alessandro},
-  year={2019}
-}
+	Author = {Anderson, Ross John and Shumailov, Ilia and Ahmed, Mansoor and Rietmann, Alessandro},
+	Title = {Bitcoin redux},
+	Year = {2019}}
 
 @inproceedings{Eskandari2019SoKTD,
- title={SoK: Transparent Dishonesty: front-running attacks on Blockchain},
- author={Shayan Eskandari and Seyedehmahsa Moosavi and Jeremy Clark},
- year={2019},
- booktitle={International Conference on Financial Cryptography and Data Security},
- organization={Springer}
-}
+	Author = {Shayan Eskandari and Seyedehmahsa Moosavi and Jeremy Clark},
+	Booktitle = {International Conference on Financial Cryptography and Data Security},
+	Organization = {Springer},
+	Title = {SoK: Transparent Dishonesty: front-running attacks on Blockchain},
+	Year = {2019}}
 
 @book{rogoff2017curse,
-  title={The Curse of Cash: How Large-Denomination Bills Aid Crime and Tax Evasion and Constrain Monetary Policy},
-  author={Rogoff, Kenneth S},
-  year={2017},
-  publisher={Princeton University Press}
-}
+	Author = {Rogoff, Kenneth S},
+	Publisher = {Princeton University Press},
+	Title = {The Curse of Cash: How Large-Denomination Bills Aid Crime and Tax Evasion and Constrain Monetary Policy},
+	Year = {2017}}
 
 @misc{geminido29:online,
-author = {},
-title = {gemini-dollar-trailofbits-audit.pdf},
-howpublished = {\url{https://gemini.com/wp-content/themes/gemini/assets/img/dollar/gemini-dollar-trailofbits-audit.pdf}},
-month = {},
-year = {},
-note = {(Accessed on 02/23/2019)}
-}
-
+	Howpublished = {\url{https://gemini.com/wp-content/themes/gemini/assets/img/dollar/gemini-dollar-trailofbits-audit.pdf}},
+	Note = {(Accessed on 02/23/2019)},
+	Title = {gemini-dollar-trailofbits-audit.pdf}}
 
 @article{wood2014ethereum,
-  title={Ethereum yellow paper},
-  author={Wood, Gavin},
-  journal={Internet: https://github. com/ethereum/yellowpaper,[Oct. 30, 2018]},
-  year={2014}
-}
+	Author = {Wood, Gavin},
+	Journal = {Internet: https://github. com/ethereum/yellowpaper,[Oct. 30, 2018]},
+	Title = {Ethereum yellow paper},
+	Year = {2014}}
 
 @article{danezis2015centrally,
-  title={Centrally banked cryptocurrencies},
-  author={Danezis, George and Meiklejohn, Sarah},
-  journal={arXiv preprint arXiv:1505.06895},
-  year={2015}
-}
+	Author = {Danezis, George and Meiklejohn, Sarah},
+	Journal = {arXiv preprint arXiv:1505.06895},
+	Title = {Centrally banked cryptocurrencies},
+	Year = {2015}}
 
 @inproceedings{carlsten2016instability,
-  title={On the instability of bitcoin without the block reward},
-  author={Carlsten, Miles and Kalodner, Harry and Weinberg, S Matthew and Narayanan, Arvind},
-  booktitle={Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
-  pages={154--167},
-  year={2016},
-  organization={ACM}
-}
+	Author = {Carlsten, Miles and Kalodner, Harry and Weinberg, S Matthew and Narayanan, Arvind},
+	Booktitle = {Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+	Organization = {ACM},
+	Pages = {154--167},
+	Title = {On the instability of bitcoin without the block reward},
+	Year = {2016}}
 
 @article{griffin2018bitcoin,
-  title={Is bitcoin really un-tethered?},
-  author={Griffin, John M and Shams, Amin},
-  year={2018}
-}
+	Author = {Griffin, John M and Shams, Amin},
+	Title = {Is bitcoin really un-tethered?},
+	Year = {2018}}
