--- a/latex-conf/main.tex
+++ b/latex-conf/main.tex
@@ -38,5 +38,5 @@
 %The authors thank the Autorit\'e des March\'es Financiers (AMF) for sponsoring this research through the Education and Good Governance Fund (EGGF), as well as NSERC through a Discovery Grant.
 
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{bib/stablecoinRef}
+\bibliography{bib/stablecoinRef, bib/pulp.bib}
 \end{document}
