--- a/latex-conf/sections/stablecoin.tex
+++ b/latex-conf/sections/stablecoin.tex
@@ -3,7 +3,7 @@
 
 \section{Introduction}\label{sec:Intro}
 
-Many early cryptocurrency proposals designed secure digital representations of government-issued money (which cryptocurrency enthusiasts typically call `fiat'). While Bitcoin was not the first proposal for a digital currency that is issued and operates independently of existing currencies and financial infrastructure, Bitcoin~\cite{nakamoto2008bitcoin} is the first of this type to establish wide-scale deployment. Without government oversight, the exchange rate of Bitcoin is essentially subject to: (a) an algorithm which releases new BTC (Bitcoin's currency) on a fixed schedule, and (b) the market for exchanging Bitcoin for other things of value, namely fiat currencies such as the USD, and potentially (c) the market for participating in transaction validation which is integral into how new BTC comes into circulation.
+Many early cryptocurrency proposals dating back to the 1980s present secure digital representations of government-issued money (which cryptocurrency enthusiasts typically call `fiat'). While Bitcoin~\cite{nakamoto2008bitcoin} was not the very first proposal for a digital currency that is issued and operates independently of existing currencies and financial infrastructure~\cite{NBFMG16}, Bitcoin is the first of this type to establish wide-scale deployment. Without government oversight, the exchange rate of Bitcoin is essentially subject to: (a) an algorithm which releases new BTC (Bitcoin's currency) on a fixed schedule, and (b) the market for exchanging Bitcoin for other things of value, namely fiat currencies such as the USD, and potentially (c) the market for participating in transaction validation which is integral into how new BTC comes into circulation.
 
 %========================%
 \begin{figure}[t]
