Fix the bib entries

--- a/latex-conf/bib/stablecoinRef.bib
+++ b/latex-conf/bib/stablecoinRef.bib
@@ -7,21 +7,32 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@book{narayanan2016bitcoin,
+  title={Bitcoin and cryptocurrency technologies: a comprehensive introduction},
+  author={Narayanan, Arvind and Bonneau, Joseph and Felten, Edward and Miller, Andrew and Goldfeder, Steven},
+  year={2016},
+  publisher={Princeton University Press}
+}
 
-@misc{bitmex,
-	Author = {Bitmex},
-	Howpublished = {\url{https://blog.bitmex.com/a-brief-history-of-stablecoins-part-1/}},
-	Note = {Accessed: 2018-09-02},
-	Title = {A brief history of Stablecoins (Part 1)},
-	Year = {2018}}
+@misc{BibEntry2019Aug,
+	title = {{A brief history of Stablecoins (Part 1) {\textendash} BitMEX Blog}},
+	year = {2019},
+	month = {Aug},
+	note = {[Online; accessed 21. Aug. 2019]},
+	url = {https://blog.bitmex.com/a-brief-history-of-stablecoins-part-1}
+}
 
-@misc{techrev,
-	Author = {Mike Orcutt},
-	Howpublished = {\url{https://www.technologyreview.com/s/611370/stablecoins-are-trending-but-they-may-ignore-basic-economics/}},
-	Note = {Accessed: 2018-07-06},
-	Title = {"Stablecoins" are trending, but they may ignore basic economics},
-	Year = {2018}}
-
+	
+@article{Orcutt2018Jun,
+	author = {Orcutt, Mike},
+	title = {{{\textquotedblleft}Stablecoins{\textquotedblright} are trending, but they may ignore basic economics}},
+	journal = {MIT Technology Review},
+	year = {2018},
+	month = {Jun},
+	publisher = {MIT Technology Review},
+	url = {https://www.technologyreview.com/s/611370/stablecoins-are-trending-but-they-may-ignore-basic-economics}
+}
+%The following reference gives ssl security warning! Couldnt edit it. Better to change it
 @misc{cryptoinsider,
 	Author = {Conor O'Higgins},
 	Howpublished = {\url{https://cryptoinsider.21mil.com/stablecoins-everything-need-know/}},
@@ -29,20 +40,29 @@
 	Title = {Stablecoins - everything you need to know},
 	Year = {2018}}
 
-@misc{cointelegraph,
-	Author = {Marie Huillet},
-	Howpublished = {\url{ https://cointelegraph.com/news/ibm-backs-new-us-dollar-pegged-stablecoin-that-runs-on-stellar-network}},
-	Note = {Accessed: 2018-07-17},
-	Title = {IBM Backs New US Dollar-Pegged Stablecoin That Runs on Stellar Network},
-	Year = {2018}}
+	
+@article{Huillet2018Jul,
+	author = {Huillet, Marie},
+	title = {{IBM Backs New US Dollar-Pegged Stablecoin That Runs on Stellar Network}},
+	journal = {Cointelegraph},
+	year = {2018},
+	month = {Jul},
+	publisher = {Cointelegraph},
+	url = {https://cointelegraph.com/news/ibm-backs-new-us-dollar-pegged-stablecoin-that-runs-on-stellar-network}
+}
 
-@misc{forbes,
-	Author = {Sherman Lee},
-	Howpublished = {\url{ https://www.forbes.com/sites/shermanlee/2018/03/12/explaining-stable-coins-the-holy-grail-of-crytpocurrency/#6050d80e4fc6}},
-	Note = {Accessed: 2018-07-06},
-	Title = {Explaining Stable Coins, The Holy Grail Of Cryptocurrency},
-	Year = {2018}}
+	
+@article{Lee2018Mar,
+	author = {Lee, Sherman},
+	title = {{Explaining Stable Coins, The Holy Grail Of Cryptocurrency}},
+	journal = {Forbes},
+	year = {2018},
+	month = {Mar},
+	publisher = {Forbes},
+	url = {https://www.forbes.com/sites/shermanlee/2018/03/12/explaining-stable-coins-the-holy-grail-of-crytpocurrency/#445da3114fc6}
+}
 
+%The following medium post has been deleted, better to delete the bib entry as we don't even cite this in the paper
 @misc{medium,
 	Author = {Liquidity Network},
 	Howpublished = {\url{ https://medium.com/@liquidity.network/stablecoin-payments-with-liquidity-network-d7e7aa8e1533}},
@@ -50,63 +70,91 @@
 	Title = {Stablecoin Payments with Liquidity.Network},
 	Year = {2018}}
 
-@misc{instability,
-	Author = {Bob McElrath},
-	Howpublished = {\url{ https://medium.com/@bob.mcelrath/on-the-in-stability-of-stablecoins-517b7d17c3ee}},
-	Note = {Accessed: 2018-09-03},
-	Title = {On The (in)Stability of Stablecoins},
-	Year = {2018}}
+	
+@article{McElrath2018Sep,
+	author = {McElrath, Bob},
+	title = {{On The (in)Stability of Stablecoins}},
+	journal = {Medium},
+	year = {2018},
+	month = {Sep},
+	publisher = {Medium},
+	url = {https://medium.com/@bob.mcelrath/on-the-in-stability-of-stablecoins-517b7d17c3ee}
+}
 
-@misc{hackernoon,
-	Author = {Haseeb Qureshi},
-	Howpublished = {\url{ https://hackernoon.com/stablecoins-designing-a-price-stable-cryptocurrency-6bf24e2689e5}},
-	Note = {Accessed: 2018-09-03},
-	Title = {Stablecoins: designing a price-stable cryptocurrency},
-	Year = {2018}}
+@misc{BibEntry2019Aug,
+	title = {{Stablecoins: designing a price-stable cryptocurrency}},
+	year = {2019},
+	month = {Aug},
+	note = {[Online; accessed 21. Aug. 2019]},
+	url = {https://hackernoon.com/stablecoins-designing-a-price-stable-cryptocurrency-6bf24e2689e5}
+}
 
 @article{gemini,
 	Author = {Gemini Trust Company, LLC},
 	Title = {The Gemini Dollar: A Regulated Stable Value Coin},
 	Year = {2018}}
 
-@misc{geminiCoindesk,
-	Author = {Nikhilesh De},
-	Howpublished = {\url{ https://www.coindesk.com/gemini-launches-nydfs-regulated-crypto-pegged-to-the-dollar/}},
-	Note = {Accessed: 2018-09-10},
-	Title = {Gemini Launches NYDFS-Regulated Crypto Pegged to the Dollar},
-	Year = {2018}}
+	
+@article{De2018Sep,
+	author = {De, Nikhilesh},
+	title = {{Gemini Launches NYDFS-Regulated Crypto Pegged to the Dollar}},
+	journal = {CoinDesk},
+	year = {2018},
+	month = {Sep},
+	publisher = {CoinDesk},
+	url = {https://www.coindesk.com/gemini-launches-nydfs-regulated-crypto-pegged-to-the-dollar}
+}
 
-@misc{paxosCoindesk,
-	Author = {Nikhilesh De},
-	Howpublished = {\url{ https://www.coindesk.com/paxos-unveils-dollar-backed-stablecoin-approved-by-new-york-regulator/}},
-	Note = {Accessed: 2018-09-10},
-	Title = {Paxos Unveils Dollar-Backed Stablecoin Approved by New York Regulator},
-	Year = {2018}}
+	
+@article{De2018Sep,
+	author = {De, Nikhilesh},
+	title = {{Paxos Unveils Dollar-Backed Stablecoin Approved by New York Regulator}},
+	journal = {CoinDesk},
+	year = {2018},
+	month = {Sep},
+	publisher = {CoinDesk},
+	url = {https://www.coindesk.com/paxos-unveils-dollar-backed-stablecoin-approved-by-new-york-regulator}
+}
 
-@article{okoyetoward,
-	Author = {Okoye, Mildred Chidinma and Clark, Jeremy},
-	Title = {Toward Cryptocurrency Lending}}
+@inproceedings{okoye2018toward,
+  title={Toward Cryptocurrency Lending},
+  author={Okoye, Mildred Chidinma and Clark, Jeremy},
+  booktitle={International Conference on Financial Cryptography and Data Security},
+  pages={367--380},
+  year={2018},
+  organization={Springer}
+}
+
 
 @article{sams2015note,
-	Author = {Sams, Robert},
-	Journal = {Brave New Coin},
-	Pages = {1--8},
-	Title = {A Note on Cryptocurrency Stabilisation: Seigniorage Shares},
-	Year = {2015}}
+  title={A Note on Cryptocurrency Stabilisation: Seigniorage Shares},
+  author={Sams, Robert},
+  journal={BraveNewCoin. com. Retrieved on April},
+  volume={28},
+  pages={2015},
+  year={2015}
+}
 
-@misc{comprehensiveOverview,
-	Author = {CP Processor TEAM},
-	Howpublished = {\url{ https://medium.com/cp-processor/comprehensive-overview-of-stablecoins-819d183f6ac7}},
-	Note = {Accessed: 2018-01-15},
-	Title = {Comprehensive overview of STABLECOINS},
-	Year = {2018}}
 
-@misc{overview,
-	Author = {Christopher Durr},
-	Howpublished = {\url{ https://hackernoon.com/overview-of-stablecoins-2e4ffef82a73}},
-	Note = {Accessed: 2018-01-15},
-	Title = {Overview of Stablecoins},
-	Year = {2018}}
+@article{Team2018Oct,
+	author = {Team, Cp Processor},
+	title = {{Comprehensive overview of STABLECOINS}},
+	journal = {Medium},
+	year = {2018},
+	month = {Oct},
+	issn = {8191-8367},
+	publisher = {CP{$\_$}PROCESSOR},
+	url = {https://medium.com/cp-processor/comprehensive-overview-of-stablecoins-819d183f6ac7}
+}
+
+
+@misc{BibEntry2019Aug,
+	title = {{Overview of Stablecoins}},
+	year = {2019},
+	month = {Aug},
+	note = {[Online; accessed 21. Aug. 2019]},
+	url = {https://hackernoon.com/overview-of-stablecoins-2e4ffef82a73}
+}
 
 @incollection{smithin2002money,
 	Author = {Smithin, John},
@@ -116,18 +164,22 @@
 	Title = {What is money? Introduction},
 	Year = {2002}}
 
-@misc{linkedin,
-	Author = {Sunny Dhillon},
-	Howpublished = {\url{ https://www.linkedin.com/pulse/stablecoins-vs-govtcoins-race-solve-cryptocurrencies-price-dhillon}},
-	Note = {Accessed: 2018-10-29},
-	Title = {Stablecoins vs. Govtcoins: The Race to Solve Cryptocurrencies Price Volatility Problems},
-	Year = {2018}}
 
+@misc{BibEntry2019Aug,
+	title = {{Stablecoins vs. Govtcoins: The Race to Solve Cryptocurrencies{'} Price Volatility Problems}},
+	year = {2019},
+	month = {Aug},
+	note = {[Online; accessed 21. Aug. 2019]},
+	url = {https://www.linkedin.com/pulse/stablecoins-vs-govtcoins-race-solve-cryptocurrencies-price-dhillon}
+}
+	
 @article{barrdear2016macroeconomics,
-	Author = {Barrdear, John and Kumhof, Michael},
-	Title = {The macroeconomics of central bank issued digital currencies},
-	Year = {2016}}
-
+  title={The macroeconomics of central bank issued digital currencies},
+  author={Barrdear, John and Kumhof, Michael},
+  year={2016},
+  publisher={Bank of England working paper}
+}	
+	
 @article{reportone,
 	Author = {Blockchain},
 	Title = {The state of stablecoins},
@@ -138,30 +190,43 @@
 	Title = {2019 state of stablecoin},
 	Year = {2019}}
 
-@misc{euromoney,
-	Author = {Peter Lee},
-	Howpublished = {\url{ https://www.euromoney.com/article/b1bbk5rb8gp227/forget-bitcoin-stablecoins-will-change-how-money-works?copyrightInfo=true}},
-	Note = {Accessed: 2018-10-29},
-	Title = {Forget bitcoin: stablecoins will change how money works},
-	Year = {2018}}
 
-@misc{coinsexplained,
-	Author = {Lukas Schor},
-	Howpublished = {\url{ https://medium.com/@argongroup/stablecoins-explained-206466da5e61}},
-	Note = {Accessed: 2018-10-29},
-	Title = {Stablecoins Explained},
-	Year = {2018}}
+@misc{BibEntry2019Aug,
+	title = {{Forget bitcoin: stablecoins will change how money works}},
+	journal = {Euromoney},
+	year = {2019},
+	month = {Aug},
+	note = {[Online; accessed 21. Aug. 2019]},
+	url = {https://www.euromoney.com/article/b1bbk5rb8gp227/forget-bitcoin-stablecoins-will-change-how-money-works?copyrightInfo=true}
+}
 
-@misc{nakamoto2008bitcoin,
-	Author = {Nakamoto, Satoshi},
-	Title = {Bitcoin: A peer-to-peer electronic cash system},
-	Year = {2008}}
 
-@misc{swan,
-	Howpublished = {\url{ https://www.investopedia.com/terms/b/blackswan.asp	}},
-	Title = {Black Swan},
-	Year = {2008}}
+@article{Schor2019May,
+	author = {Schor, Lukas},
+	title = {{Stablecoins Explained}},
+	journal = {Medium},
+	year = {2019},
+	month = {May},
+	publisher = {Medium},
+	url = {https://medium.com/@schor/stablecoins-explained-206466da5e61}
+}
 
+@article{nakamoto2008bitcoin,
+  title={Bitcoin: A peer-to-peer electronic cash system},
+  author={Nakamoto, Satoshi and others},
+  year={2008},
+  publisher={Working Paper}
+}
+
+
+@misc{BibEntry2019Aug,
+	title = {{Black Swan Definition}},
+	journal = {Investopedia},
+	year = {2019},
+	month = {Aug},
+	note = {[Online; accessed 21. Aug. 2019]},
+	url = {https://www.investopedia.com/terms/b/blackswan.asp}
+}
 @book{harris2003trading,
 	Author = {Harris, Larry},
 	Pages = {410--419},
@@ -176,26 +241,35 @@
 	Year = {1978}}
 
 @article{ametrano2016hayek,
-	Author = {Ametrano, Ferdinando M},
-	Title = {Hayek money: The cryptocurrency price stability solution},
-	Year = {2016}}
+  title={Hayek money: The cryptocurrency price stability solution},
+  author={Ametrano, Ferdinando M},
+  journal={Available at SSRN 2425270},
+  year={2016}
+}
 
-@misc{TheSearc7:online,
-	Author = {Vitalik Buterin},
-	Howpublished = {\url{https://blog.ethereum.org/2014/11/11/search-stable-cryptocurrency/}},
-	Month = {November4},
-	Note = {(Accessed on 02/11/2019)},
-	Title = {The Search for a Stable Cryptocurrency},
-	Year = {2014}}
 
-@misc{StateofS96:online,
-	Author = {Nathan Sexer},
-	Howpublished = {\url{https://media.consensys.net/the-state-of-stablecoins-2018-79ccb9988e63}},
-	Month = {July24},
-	Note = {(Accessed on 02/12/2019)},
-	Title = {State of Stablecoins, 2018 -- ConsenSys Media},
-	Year = {2018}}
+@misc{EthereumFoundation2019Aug,
+	author = {{Ethereum Foundation}},
+	title = {{The Search for a Stable Cryptocurrency}},
+	year = {2019},
+	month = {Aug},
+	note = {[Online; accessed 21. Aug. 2019]},
+	url = {https://blog.ethereum.org/2014/11/11/search-stable-cryptocurrency}
+}
 
+
+@article{Sexer2019Aug,
+	author = {Sexer, Nathan},
+	title = {{State of Stablecoins, 2018}},
+	journal = {Medium},
+	year = {2019},
+	month = {Aug},
+	issn = {7999-8863},
+	publisher = {ConsenSys Media},
+	url = {https://media.consensys.net/the-state-of-stablecoins-2018-79ccb9988e63}
+}
+
+%The following reference was not found! We dont cite it in the paper though
 @misc{ltblackg50:online,
 	Author = {Bryan Routledge, Ariel Zetlin-Jones},
 	Howpublished = {\url{http://www.andrew.cmu.edu/user/azj/research/rzj_slides201808.pdf}},
@@ -248,6 +322,9 @@
 	Year = {2016}}
 
 @article{griffin2018bitcoin,
-	Author = {Griffin, John M and Shams, Amin},
-	Title = {Is bitcoin really un-tethered?},
-	Year = {2018}}
+  title={Is bitcoin really un-tethered?},
+  author={Griffin, John M and Shams, Amin},
+  journal={Available at SSRN 3195066},
+  year={2018}
+}	
+	
