More edits on references

--- a/latex-conf/bib/stablecoinRef.bib
+++ b/latex-conf/bib/stablecoinRef.bib
@@ -180,15 +180,21 @@
   publisher={Bank of England working paper}
 }	
 	
-@article{reportone,
-	Author = {Blockchain},
-	Title = {The state of stablecoins},
-	Year = {2018}}
+@misc{blockchain2018state,
+  title={The State of Stablecoins},
+  author={Blockchain Luxembourg, SA},
+  year={2018}
+}
 
-@article{reporttwo,
-	Author = {Blockchain},
-	Title = {2019 state of stablecoin},
-	Year = {2019}}
+@article{Team2019Feb,
+	author = {Team, Blockchain},
+	title = {{Introducing: 2019 State of Stablecoins Report}},
+	journal = {Blockchain Blog},
+	year = {2019},
+	month = {Feb},
+	publisher = {Blockchain Blog},
+	url = {https://blog.blockchain.com/2019/02/20/introducing-2019-stablecoins}
+}
 
 
 @misc{BibEntry2019Aug,
